# mcdiscovery

./: .gitignore  README.md  classIndex.html  index.html  mcdiscovery.__init__.html  mcdiscovery.__main__.html  mcdiscovery.html  mcdiscovery.metadata.html  mcdiscovery.net.LANServerFinder.html  mcdiscovery.net.html  mcdiscovery.types.__init__.html  mcdiscovery.types.html  mcdiscovery.types.local_server.LocalServer.html  mcdiscovery.types.local_server.html  moduleIndex.html  nameIndex.html  objects.inv  pyproject.toml  undoccedSummary.html
.github/workflows/: build.yml  pydoctor.yml
mcdiscovery/: __init__.py  __main__.py  metadata.py  net.py
mcdiscovery/types/: __init__.py  local_server.py
tests/: metadata_test.py
