[tool.poetry]
name = "mcdiscovery"
version = "0.1.0"
description = "A library for discovering Minecraft LAN servers on a network"
authors = ["Evan Pratten <ewpratten@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pydoctor = "^20.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
